[gd_scene load_steps=3 format=3 uid="uid://b5dw67meigjtq"]

[ext_resource type="Script" uid="uid://1ajthhjt74u6" path="res://scripts/logic/interior_restrictor.gd" id="1_c05g6"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_c05g6"]
points = PackedVector3Array(-10, -5, -10, -10, 5, -10, 10, -5, -10, -10, -5, 10, -10, 5, 10, 10, 5, -10, 10, -5, 10, 10, 5, 10)

[node name="InteriorRestrictor" type="Node3D"]
script = ExtResource("1_c05g6")

[node name="RestrictorArea" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="RestrictorArea"]
shape = SubResource("ConvexPolygonShape3D_c05g6")

[node name="RestrictorOverlap_tmr" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_exited" from="RestrictorArea" to="." method="_on_restrictor_area_body_exited"]
[connection signal="timeout" from="RestrictorOverlap_tmr" to="." method="_on_restrictor_overlap_tmr_timeout"]
